@@ -5553,7 +5553,10 @@ struct Espionage_Form
   int field_1584;
   int field_1588;
   Scroll_Bar Scroll_Bar;
-  int field_294C[1311];
+  int field_294C[1264];
+  int target_civ_id_count;
+  int target_civ_ids[32];
+  int field_3D90[14];
   int field_3DC8[174];
   int mouse_over_control;
   int selected_civ_list_index;
